--- a/.github/workflows/opencode-manual-review.yml
+++ b/.github/workflows/opencode-manual-review.yml
@@ -68,8 +68,11 @@ jobs:
           PR_TITLE=$(echo "$PR_DATA" | jq -r '.title')
           PR_AUTHOR=$(echo "$PR_DATA" | jq -r '.author.login')
           
-          git fetch origin $HEAD_REF:$HEAD_REF
-          git fetch origin $BASE_REF:$BASE_REF
+          echo "Fetching branches..."
+          git fetch origin $HEAD_REF
+          git fetch origin $BASE_REF
+          
+          echo "Checking out base branch..."
           git checkout $BASE_REF
           
           cat > pr_context.md << 'EOF'
@@ -90,15 +93,15 @@ jobs:
           ## Changed Files
           EOF
           
-          git diff --name-status $BASE_REF...$HEAD_REF >> pr_context.md
+          git diff --name-status origin/$BASE_REF...origin/$HEAD_REF >> pr_context.md
           echo "" >> pr_context.md
           echo "## Statistics" >> pr_context.md
-          git diff --stat $BASE_REF...$HEAD_REF >> pr_context.md
+          git diff --stat origin/$BASE_REF...origin/$HEAD_REF >> pr_context.md
           echo "" >> pr_context.md
           echo "## Full Diff" >> pr_context.md
-          git diff -U5 $BASE_REF...$HEAD_REF >> pr_context.md
+          git diff -U5 origin/$BASE_REF...origin/$HEAD_REF >> pr_context.md
           
-          git diff --name-only $BASE_REF...$HEAD_REF > changed_files.txt
+          git diff --name-only origin/$BASE_REF...origin/$HEAD_REF > changed_files.txt
           
           echo "head_ref=$HEAD_REF" >> $GITHUB_OUTPUT
           echo "base_ref=$BASE_REF" >> $GITHUB_OUTPUT
@@ -126,7 +129,7 @@ jobs:
             1. Read pr_context.md for all changes
             2. For each file in changed_files.txt:
                - Read base version from working directory
-               - Use `git show ${{ steps.pr_info.outputs.head_ref }}:path/to/file` for PR version
+               - Use `git show origin/${{ steps.pr_info.outputs.head_ref }}:path/to/file` for PR version
                - Analyze changes
             3. Check related files for context
             
